add : bikin border merah bertuliskan anisa

--- a/week3/index.html
+++ b/week3/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Muchson</h1>
+    <div style="border:2px dotted red;"> 
+        <h2>Frontend</h2>
+        <p> Anisa Febriyani</p>
+    </div>
 </body>
 </html>
