add : create video from yt and make a list

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Muchson</h1>
-    <div style="border:2px dotted red;"> 
-        <h2>Frontend</h2>
-        <p> Anisa Febriyani</p>
+    <div style="border: 2px dotted red">
+      <h2>Frontend</h2>
+      <p>Anisa Febriyani</p>
     </div>
-</body>
+    <div style="background-color: grey">
+      <p>Rizky</p>
+      <ol>
+        <li>Kediri</li>
+        <li>Kelas DTI Batch 7</li>
+        <li>Mantul!</li>
+      </ol>
+    </div>
+    <div>
+      <iframe width="700px" height="500px" src="https://youtube.com/embed/F-qx8VX25Wk?"></iframe>
+    </div>
+  </body>
 </html>
