add : teks kelas frontend

--- a/week3/index.html
+++ b/week3/index.html
@@ -9,7 +9,7 @@
     <h1>Muchson</h1>
     <div style="border: 2px dotted red">
       <h2>Frontend</h2>
-      <p>Anisa Febriyani</p>
+      <p>Anisa Febriyani kelas Frontend</p>
     </div>
     <div style="background-color: grey">
       <p>Rizky</p>
