add : create data diri menggunakan unordered list

--- a/week3/index.html
+++ b/week3/index.html
@@ -11,6 +11,14 @@
       <h2>Frontend</h2>
       <p>Anisa Febriyani kelas Frontend</p>
     </div>
+    <div>
+      <p>Anisa Febriyani</p>
+      <ul>
+        <li>Jakarta</li>
+        <li>Frontend</li>
+        <li>Junior Teacher Programming</li>
+      </ul>
+    </div>
     <div style="background-color: grey">
       <p>Rizky</p>
       <ol>
