--- a/week3/index.html
+++ b/week3/index.html
@@ -11,21 +11,23 @@
       <h2>Frontend</h2>
       <p>Anisa Febriyani kelas Frontend</p>
     </div>
-    <div>
-      <p>Anisa Febriyani</p>
-      <ul>
-        <li>Jakarta</li>
-        <li>Frontend</li>
-        <li>Junior Teacher Programming</li>
-      </ul>
-    </div>
-    <div style="background-color: grey">
-      <p>Rizky</p>
-      <ol>
-        <li>Kediri</li>
-        <li>Kelas DTI Batch 7</li>
-        <li>Mantul!</li>
-      </ol>
+    <div style="display: flex; justify-content: space-evenly">
+      <div>
+        <p>Anisa Febriyani</p>
+        <ul>
+          <li>Jakarta</li>
+          <li>Frontend</li>
+          <li>Junior Teacher Programming</li>
+        </ul>
+      </div>
+      <div style="background-color: grey">
+        <p>Rizky</p>
+        <ol>
+          <li>Kediri</li>
+          <li>Kelas DTI Batch 7</li>
+          <li>Mantul!</li>
+        </ol>
+      </div>
     </div>
     <div>
       <iframe width="700px" height="500px" src="https://youtube.com/embed/F-qx8VX25Wk?"></iframe>
