--- a/week3/index.html
+++ b/week3/index.html
@@ -4,23 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Muchson</h1>
+    <div class="flex-space-between flex-direction">
+      <h1>Muchson</h1>
+      <div style="border: 2px dotted red">
+        <h2>Frontend</h2>
+        <p>Anisa Febriyani</p>
+      </div>
+    </div>
+    <div class="flex-space-between" >
     <div style="border: 2px dotted red">
       <h2>Frontend</h2>
       <p>Anisa Febriyani</p>
     </div>
-    <div style="background-color: grey">
-      <p>Rizky</p>
-      <ol>
-        <li>Kediri</li>
-        <li>Kelas DTI Batch 7</li>
-        <li>Mantul!</li>
-      </ol>
-    </div>
-    <div>
-      <iframe width="700px" height="500px" src="https://youtube.com/embed/F-qx8VX25Wk?"></iframe>
-    </div>
+      <div >
+        <div>
+          <p>Rizky</p>
+          <ol>
+            <li>Kediri</li>
+            <li>Kelas DTI Batch 7</li>
+            <li>Mantul!</li>
+          </ol>
+        </div>
+      </div>
+  </div>
+
+    <!-- <div>
+      <iframe width="700px" height="500px" src=""></iframe>
+    </div> -->
   </body>
 </html>
