"add : new update"

--- a/week3/index.html
+++ b/week3/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -28,6 +29,14 @@
           <li>Mantul!</li>
         </ol>
       </div>
+    </div>
+    <div class="space-between">
+      <div class="color-red">
+        <h1>skmksnc</h1>
+      </div>
+    </div>
+    <div class="space-between">
+      <h2>fidov</h2>
     </div>
     <div>
       <iframe width="700px" height="500px" src="https://youtube.com/embed/F-qx8VX25Wk?"></iframe>
