add : class, margin, padding

--- a/week3/index.html
+++ b/week3/index.html
@@ -4,25 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
     <div style="display: flex; justify-content: space-between; flex-direction: row-reverse">
-      <h1>Muchson</h1>
-      <div style="border: 2px dotted red">
-        <h2>Frontend</h2>
-        <p>Anisa Febriyani kelas Frontend</p>
+      <div class="color-red text-white">
+        <h1>Muchson</h1> 
       </div>
-    </div>
+        <div class="border-red margin-top">
+          <h2>Frontend</h2>
+        
+          <p>Anisa Febriyani kelas Frontend</p>
+        </div>
+      </div>
     <div style="display: flex; justify-content: space-evenly">
       <div>
-        <p>Anisa Febriyani</p>
-        <ul>
-          <li>Jakarta</li>
-          <li>Frontend</li>
-          <li>Junior Teacher Programming</li>
-        </ul>
+    <div class="background-blue text-white">
+      <p>Anisa Febriyani</p>
+    </div>
+    <div class="background-green">
+      <ul>
+        <li>Jakarta</li>
+        <li>Frontend</li>
+        <li>Junior Teacher Programming</li>
+      </ul>
+    </div>
       </div>
-      <div style="background-color: grey">
+      <div class="background-grey">
         <p>Rizky</p>
         <ol>
           <li>Kediri</li>
