add HTML and CSS code

--- a/week3/index.html
+++ b/week3/index.html
@@ -4,32 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
-
-    <div style="display: flex; justify-content: space-between; flex-direction: row-reverse">
+    <div
+      style="
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+      "
+    >
       <div class="color-red text-white">
-        <h1>Muchson</h1> 
+        <h1>Muchson</h1>
       </div>
-        <div class="border-red margin-top">
-          <h2>Frontend</h2>
-        
-          <p>Anisa Febriyani kelas Frontend</p>
-        </div>
+      <div class="border-red margin-top">
+        <h2>Frontend</h2>
+
+        <p>Anisa Febriyani kelas Frontend</p>
       </div>
+    </div>
     <div style="display: flex; justify-content: space-evenly">
       <div>
-    <div class="background-blue text-white">
-      <p>Anisa Febriyani</p>
-    </div>
-    <div class="background-green">
-      <ul>
-        <li>Jakarta</li>
-        <li>Frontend</li>
-        <li>Junior Teacher Programming</li>
-      </ul>
-    </div>
+        <div class="background-blue text-white">
+          <p>Anisa Febriyani</p>
+        </div>
+        <div class="background-green">
+          <ul>
+            <li>Jakarta</li>
+            <li>Frontend</li>
+            <li>Junior Teacher Programming</li>
+          </ul>
+        </div>
       </div>
       <div class="background-grey">
         <p>Rizky</p>
@@ -41,7 +47,11 @@
       </div>
     </div>
     <div>
-      <iframe width="700px" height="500px" src="https://youtube.com/embed/F-qx8VX25Wk?"></iframe>
+      <iframe
+        width="700px"
+        height="500px"
+        src="https://youtube.com/embed/F-qx8VX25Wk?"
+      ></iframe>
     </div>
   </body>
 </html>
