--- a/week3/index.html
+++ b/week3/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="/week3/script.js"></script>
   </head>
   <body>
-    <h1>Muchson</h1>
+    <h1 class="judul">Muchson</h1>
     <div style="border: 2px dotted red">
       <h2>Frontend</h2>
       <p>Anisa Febriyani</p>
